# hicks

./: README.md  build.sh  hicks.cabal  test-against-upcloud.sh
Hicks/: CmdLine.hs  Provision.hs  Types.hs  UpCloud.hs
