name:                hicks
version:             0.1.0
Cabal-Version:       >= 1.8
synopsis:            Hicks happily spawns machines.
description:
  Hicks happily spawns machines.
category:            Utility
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
build-type:          Simple

library
  build-depends:       aeson,
                       aeson-streams,
                       base == 4.*,
                       bytestring,
                       cmdargs,
                       directory,
                       filemanip,
                       filepath,
                       process,
                       template,
                       temporary,
                       text,
                       unix,
                       unordered-containers,
                       vector
  exposed-modules:     Hicks.CmdLine,
                       Hicks.Provision,
                       Hicks.Types,
                       Hicks.UpCloud
  other-modules:       Paths_hicks
  ghc-options:         -Wall

executable hicks
  hs-source-dirs:      bin
  main-is:             config.hs
  build-depends:       base == 4.*,
                       hicks
  ghc-options:         -Wall
                       -threaded
